making photo square

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -124,7 +124,7 @@ params:
     image: /images/hero3.png
     bottomImage:
       enable: true
-    roundImage: true # Make hero image circular | default false
+    roundImage: false # Make hero image circular | default false
     button:
       enable: true
       name: "Resume"
