--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,16 +1,16 @@
-baseURL: "//0aaryan.github.io"
-languageCode: "en-us"
-title: "Aryan Arora"
+baseURL: //0aaryan.github.io
+languageCode: en-us
+title: Aryan Arora
 theme: hugo-profile
 
 outputs:
   home:
-    - "HTML"
-    - "RSS"
-    - "JSON"
+  - HTML
+  - RSS
+  - JSON
   page:
-    - "HTML"
-    - "RSS"
+  - HTML
+  - RSS
 
 Paginate: 3
 enableRobotsTXT: true
@@ -24,16 +24,16 @@ markup:
 
 Menus:
   main:
-    - identifier: blog
-      name: Blog
-      title: Blog posts
-      url: /blogs
-      weight: 1
-    - identifier: gallery
-      name: Gallery
-      title: Blog posts
-      url: /gallery
-      weight: 2
+  - identifier: blog
+    name: Blog
+    title: Blog posts
+    url: /blogs
+    weight: 1
+  - identifier: gallery
+    name: Gallery
+    title: Blog posts
+    url: /gallery
+    weight: 2
     #Dropdown menu
     # - identifier: dropdown
     #   title: Example dropdown menu
@@ -53,10 +53,10 @@ Menus:
     #   weight: 2
 
 params:
-  title: "Aryan's portfolio"
-  description: "Welcome to my corner of internet"
+  title: Aryan's portfolio
+  description: Welcome to my corner of internet
   # staticPath: "public"  # The path to serve the static files from
-  favicon: "/images/logo.png"
+  favicon: /images/logo.png
 
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
@@ -101,9 +101,9 @@ params:
   # If you want to customize the menu, you can change it here
   navbar:
     align: ms-auto # Left: ms-auto | center: mx-auto | right: me-auto | Default: ms-auto
-    brandLogo: "/images/logo.png" # Logo for the brand | default is the favicon variable
+    brandLogo: /images/logo.png   # Logo for the brand | default is the favicon variable
     # showBrandLogo: false # Show brand logo in nav bar | default is true
-    brandName: "Aryan Arora" # Brand name for the brand | default is the title variable
+    brandName: Aryan Arora   # Brand name for the brand | default is the title variable
     disableSearch: false
     # searchPlaceholder: "Search"
     menus:
@@ -117,114 +117,119 @@ params:
   # Hero
   hero:
     enable: true
-    intro: "Hi, my name is"
-    title: "Aryan"
-    subtitle: "I am a software developer"
-    content: "I am a software developer who loves to automate things. I have a computer science background and currently I am open to new opportunities."
+    intro: Hi, my name is
+    title: Aryan
+    subtitle: I am a software developer
+    content: I am a software developer who loves to automate things. I have a computer
+      science background and currently I am open to new opportunities.
     image: /images/hero3.png
     bottomImage:
       enable: true
     roundImage: false # Make hero image circular | default false
     button:
       enable: true
-      name: "Resume"
-      url: "https://drive.google.com/file/d/1eArD5Qxe2H3VS2d1BzdhRcRFcaNxLgEH/view"
+      name: Resume
+      url: https://drive.google.com/file/d/1eArD5Qxe2H3VS2d1BzdhRcRFcaNxLgEH/view
       download: true
       newPage: true
     socialLinks:
       fontAwesomeIcons:
-        - icon: fab fa-github
-          url: https://github.com/0aaryan
-        - icon: fab fa-linkedin
-          url: https://www.linkedin.com/in/am-aryan-arora/
+      - icon: fab fa-github
+        url: https://github.com/0aaryan
+      - icon: fab fa-linkedin
+        url: https://www.linkedin.com/in/am-aryan-arora/
       customIcons:
-        - icon: /images/logo.png
-          url: "https://0aaryan.github.io/"
+      - icon: /images/logo.png
+        url: https://0aaryan.github.io/
 
   # About
   about:
     enable: true
-    title: "About Me"
-    image: "/images/hero3.png"
+    title: About Me
+    image: /images/hero3.png
     content: |-
-     I have been coding for the past 3 years and have developed proficiency in several programming languages, including Python, JavaScript, and C++. I have worked on a wide range of personal projects, including developing web applications using Django and Node-Red, creating IoT projects with Raspberry Pi, and exploring emerging technologies like ML and Computer Vision. I have a passion for learning and am not afraid to take on new challenges. With strong problem-solving skills and a willingness to experiment, I am constantly seeking to expand my knowledge and skills
-     
-     I am currently working on a project that will be used to automate content creation.
+      I have been coding for the past 3 years and have developed proficiency in several programming languages, including Python, JavaScript, and C++. I have worked on a wide range of personal projects, including developing web applications using Django and Node-Red, creating IoT projects with Raspberry Pi, and exploring emerging technologies like ML and Computer Vision. I have a passion for learning and am not afraid to take on new challenges. With strong problem-solving skills and a willingness to experiment, I am constantly seeking to expand my knowledge and skills
+
+      I am currently working on a project that will be used to automate content creation.
     skills:
       enable: true
       title: "Here are a few technologies I've been working with recently:"
       items:
-        - "AWS"
-        - "Langchain"
-        - "Generative AI"
-        - "Prompt Engineering"
-        - "Graph Database"
-        - "Content creation"
+      - AWS
+      - Langchain
+      - Generative AI
+      - Prompt Engineering
+      - Graph Database
+      - Content creation
 
   # Experience
   experience:
     enable: false
     # title: "Custom Name"
     items:
-      - job: "Senior Software Developer"
-        company: "Facebook"
-        companyUrl: "https://example.com"
-        date: "Jan 2022 - present"
-        featuredLink:
-          enable: true
-          name: "View the project"
-          url: "https://example.com"
-        content: "I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city."
+    - job: Senior Software Developer
+      company: Facebook
+      companyUrl: https://example.com
+      date: Jan 2022 - present
+      featuredLink:
+        enable: true
+        name: View the project
+        url: https://example.com
+      content: I am currently working as a software developer at [example org.](https://example.com)
+        in San Francisco, CA. I am currently working on a project that will be used
+        to help people find the best way to get around the city.
 
-      - job: "Software Developer"
-        company: "Amazon"
-        companyUrl: "https://example.com"
-        date: "Sep 2020 - Dec 2021"
-        featuredLink:
-          enable: true
-          url: "https://example.com"
-        info:
-          enable: true
-          content: I worked as a software developer for more than one year in Amazon.
-        content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
+    - job: Software Developer
+      company: Amazon
+      companyUrl: https://example.com
+      date: Sep 2020 - Dec 2021
+      featuredLink:
+        enable: true
+        url: https://example.com
+      info:
+        enable: true
+        content: I worked as a software developer for more than one year in Amazon.
+      content: |
+        I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
 
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
+        - Lead backend developer for a product.
+        - Created a frontend design for a product.
 
-      - job: "Junior Software Developer"
-        company: "Apple"
-        companyUrl: "https://example.com"
-        date: "Jan 2020 - Aug 2020"
-        info:
-          enable: false
-        featuredLink:
-          enable: true
-          url: "https://example.com"
-        content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
+    - job: Junior Software Developer
+      company: Apple
+      companyUrl: https://example.com
+      date: Jan 2020 - Aug 2020
+      info:
+        enable: false
+      featuredLink:
+        enable: true
+        url: https://example.com
+      content: |
+        I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
 
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
+        - Lead backend developer for a product.
+        - Created a frontend design for a product.
 
-      - job: "UI/UX Designer"
-        company: "Netflix"
-        companyUrl: "https://example.com"
-        date: "June 2017 - Nov 2019"
-        featuredLink:
-          enable: true
-          url: "https://example.com"
-        content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
+    - job: UI/UX Designer
+      company: Netflix
+      companyUrl: https://example.com
+      date: June 2017 - Nov 2019
+      featuredLink:
+        enable: true
+        url: https://example.com
+      content: |
+        I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
 
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
+        - Lead backend developer for a product.
+        - Created a frontend design for a product.
 
-      - job: "Product Designer"
-        company: "Google"
-        companyUrl: "https://example.com"
-        date: "Feb 2016 - Mar 2017"
-        content: "I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city."
+    - job: Product Designer
+      company: Google
+      companyUrl: https://example.com
+      date: Feb 2016 - Mar 2017
+      content: I am currently working as a software developer at [example org.](https://example.com)
+        in San Francisco, CA. I am currently working on a project that will be used
+        to help people find the best way to get around the city.
 
   # Education
   education:
@@ -233,25 +238,25 @@ params:
     index: false
     items:
 
-      - title: "Bachelor of Science in Computer Science"
-        school:
-          name: "Vellore Institute of Technology"
-          url: "https://example.org"
-        date: "2020 - 2024"
-        GPA: "7.9 out of 10.0"
-        content: |-
-          I did several projects in my college. Here are some of them.
-          - [Freestyle - A full stack e-commerce website using Django.]()
-          - [Hand Gestured Controlled Robot using computer vision.]()
-          - [Terrashield - A chrome extension to detect and track phishing websites.]()
+    - title: Bachelor of Science in Computer Science
+      school:
+        name: Vellore Institute of Technology
+        url: https://example.org
+      date: 2020 - 2024
+      GPA: 7.9 out of 10.0
+      content: |-
+        I did several projects in my college. Here are some of them.
+        - [Freestyle - A full stack e-commerce website using Django.]()
+        - [Hand Gestured Controlled Robot using computer vision.]()
+        - [Terrashield - A chrome extension to detect and track phishing websites.]()
 
-          Extracurricular Activities
-            - Linux club member
-            - Cyber-spectrum hackathon runner-up
-        featuredLink:
-          enable: false
-          name: "My academic record"
-          url: "https://example.com"
+        Extracurricular Activities
+          - Linux club member
+          - Cyber-spectrum hackathon runner-up
+      featuredLink:
+        enable: false
+        name: My academic record
+        url: https://example.com
 
 
   # Achievements
@@ -259,78 +264,48 @@ params:
     enable: true
     # title: "Custom Name"
     items:
-      - title: Google kickstart runner
-        content: I solved all problems with optimal solution.
-        url: https://example.com
-        image: /images/achievment.jpg
-      - title: Facebook Hackathon Winner
-        content: Developed a product using Artificial Intelligence.
-        image: /images/achievment.jpg
-      - title: Hugo Profile
-        content: Developed a theme and getting 1K+ downloads per month.
-        url: "https://github.com/gurusabarish/hugo-profile"
-        image: /images/achievment.jpg
-      - title: Microsoft Imagine Runner
-        content: We are developed a product which can help others.
-      - title: Google Summer of Code
-        content: Contributed to a open source project.
-        url: https://example.com
+    - title: Google kickstart runner
+      content: I solved all problems with optimal solution.
+      url: https://example.com
+      image: /images/achievment.jpg
+    - title: Facebook Hackathon Winner
+      content: Developed a product using Artificial Intelligence.
+      image: /images/achievment.jpg
+    - title: Hugo Profile
+      content: Developed a theme and getting 1K+ downloads per month.
+      url: https://github.com/gurusabarish/hugo-profile
+      image: /images/achievment.jpg
+    - title: Microsoft Imagine Runner
+      content: We are developed a product which can help others.
+    - title: Google Summer of Code
+      content: Contributed to a open source project.
+      url: https://example.com
 
   # projects
   projects:
     enable: true
-    # title: "Custom Name"
     items:
-      - title: Hugo Profile
-        content: A highly customizable and mobile first Hugo template for personal portfolio and blog.
-        image: /images/projects/profile.png
-        featured:
-          name: Demo
-          link: https://hugo-profile.netlify.app
-        badges:
-          - "Hugo"
-          - "Bootstrap"
-          - "Javascript"
-        links:
-          - icon: fa fa-envelope
-            url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/hugo-profile
-          - icon: fab fa-twitter
-            url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
-
-      - title: Image Converter
-        content: A web app to convert image to pdf, png to jpg, png to jpg and png to webp without database using django.
-        image: /images/projects/converter.jpg
-        featured:
-          name: Demo
-          link: https://django-converter.herokuapp.com
-        badges:
-          - "Django"
-          - "Bootstrap"
-        links:
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/converter
-
-      - title: Hugo Profile V2
-        content: A clean and simple Hugo template for personal portfolio and blog.
-        image: /images/projects/profile2.jpg
-        featured:
-          name: Demo V2
-          link: https://hugo-profile-2.netlify.app
-        badges:
-          - "Hugo"
-          - "Bootstrap"
-          - "Javascript"
-        links:
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/HugoProfileV2
-
-  #Contact
+    - title: Freestyle
+      badges:
+      - Django
+      - E-commerce
+      content: A full-stack e-commerce app built with Django. Users can shop,manage
+        profiles,and view order history.
+      featured:
+        link: http://freeyourstyle.pythonanywhere.com
+        name: Demo
+      image: 
+        https://github.com/0aaryan/freestyle/assets/73797587/1e0b9753-3f68-46f2-b8ba-ba78454aec1f
+      links:
+      - icon: fab fa-github
+        url: https://github.com/0aaryan/freestyle
+      - icon: fa fa-external-link-alt
+        url: http://freeyourstyle.pythonanywhere.com
   contact:
     enable: true
     # title: "Custom Name"
-    content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
+    content: My inbox is always open. Whether you have a question or just want to
+      say hi, I’ll try my best to get back to you!
     email: aroraryan826@gmail.com
     btnName: Mail me
     # formspree:
@@ -341,7 +316,7 @@ params:
 
   footer:
     recentPosts:
-      path: "blogs"
+      path: blogs
       count: 3
       title: Recent Posts
       enable: true
@@ -361,22 +336,22 @@ params:
   singlePages:
     readTime:
       enable: true
-      content: "min read"
+      content: min read
     scrollprogress:
       enable: true
 
   # For translations
   terms:
-    read: "Read"
-    toc: "Table Of Contents"
-    copyright: "All rights reserved"
-    pageNotFound: "Page not found"
-    emailText: "Check out this site"
+    read: Read
+    toc: Table Of Contents
+    copyright: All rights reserved
+    pageNotFound: Page not found
+    emailText: Check out this site
 
   datesFormat:
-    article: "Jan 2, 2006"
-    articleList: "Jan 2, 2006"
-    articleRecent: "Jan 2, 2006"
+    article: Jan 2, 2006
+    articleList: Jan 2, 2006
+    articleRecent: Jan 2, 2006
 
   #customScripts: -| # You can add custom scripts which will be added before </body> tag
   #  <script type="text/javascript"><!-- any script here --></script>
