project script update

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -318,6 +318,24 @@ params:
         url: https://github.com/your-github-repo-url
       - icon: fa fa-external-link-alt
         url: https://jovial-lolly-5b5f24.netlify.app/#about
+    - title: Reinforcement Learning Flappy Bird
+      badges:
+      - Pygame
+      - Reinforcement Learning
+      content: This repository contains an implementation of Flappy Bird game using
+        Pygame and reinforcement learning with NEAT (NeuroEvolution of Augmenting
+        Topologies). The NEAT algorithm is used to train an agent to play Flappy Bird
+        game autonomously by controlling the bird's jumps.
+      featured:
+        link: https://github.com/0aaryan/Reinforcement_learning_FlappyBird
+        name: Repository
+      image: 
+        https://github.com/0aaryan/Reinforcement_learning_FlappyBird/assets/73797587/bc773056-e00d-44a3-8196-f0ce099d9949
+      links:
+      - icon: fab fa-github
+        url: https://github.com/0aaryan/Reinforcement_learning_FlappyBird
+      - icon: fa fa-external-link-alt
+        url: https://github.com/0aaryan/Reinforcement_learning_FlappyBird
   contact:
     enable: true
     # title: "Custom Name"
