--- a/hugo.yaml
+++ b/hugo.yaml
@@ -122,7 +122,7 @@ params:
     subtitle: I am a software developer
     content: I am a software developer who loves to automate things. I have a computer
       science background and currently I am open to new opportunities.
-    image: /images/hero3.png
+    image: /images/hero_bw.jpeg
     bottomImage:
       enable: true
     roundImage: false # Make hero image circular | default false
@@ -264,22 +264,14 @@ params:
     enable: true
     # title: "Custom Name"
     items:
-    - title: Google kickstart runner
-      content: I solved all problems with optimal solution.
-      url: https://example.com
-      image: /images/achievment.jpg
-    - title: Facebook Hackathon Winner
-      content: Developed a product using Artificial Intelligence.
-      image: /images/achievment.jpg
-    - title: Hugo Profile
-      content: Developed a theme and getting 1K+ downloads per month.
-      url: https://github.com/gurusabarish/hugo-profile
-      image: /images/achievment.jpg
-    - title: Microsoft Imagine Runner
-      content: We are developed a product which can help others.
-    - title: Google Summer of Code
-      content: Contributed to a open source project.
-      url: https://example.com
+    - title: IBM AI ANALYST
+      content: I completed IBM AI Analyst Professional Certificate.
+      url: https://drive.google.com/file/d/1o8W-g8WjEdjlRCcffvK7peoShKHnzbrH/view?usp=sharing
+      image: https://images.credly.com/images/7d8aab55-1110-4242-910e-93a649a319cf/twitter_thumb_201604_image.png
+    - title: CyberSpectrum-2023 expo
+      content: runner-up position at CyberSpectrum-2023 expo
+      url: https://www.linkedin.com/posts/am-aryan-arora_cyberspectrum2023-vit-smartbot-activity-7052655382866890752-v_RZ?utm_source=share&utm_medium=member_desktop
+      image: https://media.licdn.com/dms/image/D5622AQGW2iKVI2t5cA/feedshare-shrink_1280/0/1681484073035?e=1701907200&v=beta&t=P7Ms9N5umbBC8qhdKZY3zNxJ_9a6EFzlLhn84nhrWBs
 
   # projects
   projects:
