--- a/hugo.yaml
+++ b/hugo.yaml
@@ -15,7 +15,7 @@ outputs:
 Paginate: 3
 enableRobotsTXT: true
 # disqusShortname: your-disqus-shortname
-# googleAnalytics: G-MEASUREMENT_ID
+googleAnalytics: G-H0WN4LD4CN
 
 markup:
   goldmark:
