--- a/hugo.yaml
+++ b/hugo.yaml
@@ -14,7 +14,7 @@ outputs:
 
 Paginate: 3
 enableRobotsTXT: true
-disqusShortname: stuck-aryan
+disqusShortname: stuckaryan
 googleAnalytics: G-H0WN4LD4CN
 
 markup:
