project script update

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -281,6 +281,23 @@ params:
   projects:
     enable: true
     items:
+    - title: Create.ai - AI-Powered Video Creation Platform
+      badges: []
+      content: Create.ai is an AI-powered video creation platform that automates the
+        process of generating scripts, converting them to audio, and creating videos
+        with customizable subtitles. Whether you're a content creator, marketer, or
+        simply looking to create videos easily, Create.ai can simplify your video
+        production process.
+      featured:
+        link: https://github.com/0aaryan/create-ai
+        name: Repository
+      image: 
+        https://github.com/0aaryan/create.ai/assets/73797587/09656210-6baa-48da-bb77-9c311670ebaa
+      links:
+      - icon: fab fa-github
+        url: https://github.com/0aaryan/create-ai
+      - icon: fa fa-external-link-alt
+        url: createai.streamlit.app
     - title: Freestyle
       badges:
       - Django
