--- a/hugo.yaml
+++ b/hugo.yaml
@@ -129,7 +129,7 @@ params:
     button:
       enable: true
       name: Resume
-      url: resume.pdf
+      url: AryanAroraResume.pdf
       download: true
       newPage: true
     socialLinks:
