--- a/hugo.yaml
+++ b/hugo.yaml
@@ -289,7 +289,7 @@ params:
         simply looking to create videos easily, Create.ai can simplify your video
         production process.
       featured:
-        link: https://github.com/0aaryan/create-ai
+        link: https://github.com/0aaryan/create.ai
         name: Repository
       image: 
         https://github.com/0aaryan/create.ai/assets/73797587/09656210-6baa-48da-bb77-9c311670ebaa
